<resources>
    <string name="app_name">Mobi Shop</string>

    <string name="start_drawer">start</string>
    <string name="end_drawer">end</string>
    <string name="txt_new_product">New product</string>
    <string name="txt_most_rated">Most rated</string>
    <string name="txt_most_visited">Most visited</string>
    <string name="check_connection">اتصال شما به اینترنت قطع شده است</string>
    <string name="reconnect">تلاش مجدد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products_list_text">جدیدترین ها</string>
    <string name="popular_products_list_text">محبوب ترین ها</string>
    <string name="rating_products_list_text">پربازدید ترین ها</string>
    <string name="add_to_cart_txt">افزودن به سبد خرید</string>
    <string name="categories">دسته بندی محصولات</string>
    <string name="Tooman">تومان</string>
    <string name="all_lists">مشاهده همه</string>

    <string name="all_products">محصولات اخیر</string>
    <string name="all_popular">محبوب ترین محصولات</string>
    <string name="all_rated">پرامتیازترین محصولات</string>


    <string name="see_all">لیست کامل</string>

    <string name="most_viewed_product">پربازدیدترین محصولات</string>

    <string name="content_description">توضیح محتوا</string>

    <string name="timer_offers_hours">03</string>

    <string name="timer_offers_minute">37</string>

    <string name="timer_offers_second">24</string>

    <string name="seperator_timer_offers">:</string>

    <string name="detail_config_product">مشخصات</string>

    <string name="detail_product_user_comment">نظرات کاربران</string>

    <string name="sent_fresh">ارسال سریع (سوپرمارکتی)</string>

    <string name="sent_from_prefix">آماده ارسال از انبار</string>

    <string name="fake_alarm">این محصول توسط تولید کننده اصلی (برند) تولید نشده است</string>

    <string name="counter_saller_garanti_product_detail">1 فروشنده و گارانتی برای این کالا وجود دارد</string>

    <string name="fake_title_product">غیر اصل</string>

    <string name="title_warranty">گارانتی 24 ماهه  کالا</string>

    <string name="tv_title_name_saller">فروش توسط موبی شاپ</string>
    <string name="no_net_again">اتصال خود را بررسی کنید.</string>
    <string name="search_hint">سرچ در موبی شاپ...</string>
    <string name="empty_card_txt">سبد خرید شما خالی است!</string>
    <string name="no_search_result">محصول مورد نظر شما یافت نشد!</string>
    <string name="txt_home">خانه</string>
    <string name="txt_shoping_card">سبد خرید</string>
    <string name="email_requer_txt">ایمیل نمیتواند خالی باشد!</string>
    <string name="username_requier_txt">نام کاربری خود را وارد کنبد!</string>
    <string name="pass_requiere_txt">رمز عبور خود را وارد کنید!</string>
    <string name="long_user_name_txt">نام کاربری طولانی است!</string>
    <string name="short_pass_txt">رمز عبور باید حداقل 6کاراکتر باشد!</string>
    <string name="valid_email_txt">لطفا ایمیل معتبر وارد کنید!</string>
    <string name="finilize_shop_txt">خرید خود را نهایی کنید</string>


    <string-array name="text">
        <item>Mobi Shop</item>
        <item>Best of everything</item>
    </string-array>

    <string-array name="counter">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
