<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Controller.NewItemsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scrollIndicators="left"
            app:indicator_visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/new_icon"
                android:visibility="invisible"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_new_product" />

            <TextView
                android:id="@+id/new_product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/new_products_list_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/popular_icon"
                android:visibility="invisible"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_most_rated" />

            <TextView
                android:id="@+id/popular_product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/popular_products_list_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rated_icon"
                android:visibility="invisible"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_most_view"
                android:layout_marginLeft="4dp" />

            <TextView
                android:id="@+id/most_rate_product_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/rating_products_list_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rate_recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>