<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/background"
    tools:context=".Controller.fragment.DetailProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/product_images"
                style="@style/AndroidImageSlider_Magnifier_Oval_Black"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:animateLayoutChanges="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"
                app:layout_constraintBottom_toTopOf="@id/pro_card"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/one" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/show_product_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Iv_share_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_share"
                    android:padding="10dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Iv_like_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_like" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/Iv_notification_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_notification" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/pro_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="@color/background"
                    android:elevation="4dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="10dp">

                    <ProgressBar
                        android:id="@+id/show_product_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutDirection="rtl">

                        <TextView
                            android:id="@+id/product_name"
                            style="?android:listSeparatorTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:paddingEnd="16dp"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:textStyle="bold|italic"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="SAMPLE NAME" />

                        <TextView
                            android:id="@+id/product_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/product_name"
                            android:layout_margin="8dp"
                            android:textDirection="rtl"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/product_name"
                            tools:layout_editor_absoluteX="-68dp"
                            tools:text="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi." />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@color/gray_400"
                    android:elevation="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_content_paste_grey600_18dp"
                            android:gravity="center"
                            android:text="@string/detail_config_product" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray_400"
                    android:layout_margin="8dp"
                    android:elevation="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableRight="@drawable/ic_forum_grey600_18dp"
                            android:gravity="center"
                            android:text="@string/detail_product_user_comment" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_productDetails_warranty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_warranty_24dp"
                        android:drawablePadding="10.0dip"
                        android:gravity="right"
                        android:padding="7.0dip"
                        android:text="@string/title_warranty"
                        android:textColor="@color/digikala_black_dark_54"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1.0dip"
                        android:layout_marginTop="5.0dip"
                        android:layout_marginBottom="5.0dip"
                        android:background="@color/gray_200" />

                    <TextView
                        android:id="@+id/tv_productDetails_seller_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/logo"
                        android:drawablePadding="10.0dip"
                        android:gravity="right"
                        android:padding="7.0dip"
                        android:text="@string/tv_title_name_saller"
                        android:textColor="@color/digikala_black_dark_54"
                        android:textSize="15.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_productDetails_sent_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:drawableRight="@drawable/ic_local_shipping_grey600_24dp"
                        android:drawablePadding="10.0dip"
                        android:gravity="right"
                        android:padding="7.0dip"
                        android:text="@string/sent_from_prefix"
                        android:textColor="@color/digikala_black_dark_54"
                        android:textSize="15.0sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/product_sale_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            app:layout_constraintTop_toBottomOf="@id/product_detail"
                            app:layout_constraintLeft_toRightOf="@id/product_real_price"
                            android:textColor="@color/categoryButtonColor"
                            android:textSize="20sp"
                            tools:text="278500" />

                        <TextView
                            android:id="@+id/product_real_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/product_detail"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_margin="8dp"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="18sp"
                            tools:text="278500" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:visibility="invisible"
                        android:id="@+id/add_to_cart_btn"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="68dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_margin="8dp"
                        android:text="@string/add_to_cart_txt"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        app:cornerRadius="8dp"
                        app:icon="@drawable/ic_add_to_cart"
                        app:iconGravity="textStart"
                        android:layout_gravity="bottom"
                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>